# tauri-plugin-key-intercept

./: .gitignore  Cargo.toml  KNOWN_LIMITATIONS.md  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE_BUILD_GUIDE.md  build.rs  package-lock.json  package.json  rollup.config.js  tsconfig.json
examples/vanilla/: README.md  index.html  package.json
examples/vanilla/public/: index.html
examples/vanilla/src/: App.tsx
examples/vanilla/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
examples/vanilla/src-tauri/capabilities/: default.json
examples/vanilla/src-tauri/src/: lib.rs
guest-js/: index.ts  keycodes.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: discover_keycode.toml  get_keycode_table.toml  open_input_monitoring_settings.toml
permissions/schemas/: schema.json
src/: commands.rs  constants.rs  error.rs  event_tap.rs  lib.rs  manager.rs  models.rs
