[package]
name = "tauri-plugin-key-intercept"
version = "0.1.0"
authors = ["Yigit Konur <yigit35@gmail.com>"]
description = "macOS-only Tauri plugin using CGEventTap FFI to intercept and override system keyboard shortcuts"
keywords = ["tauri", "macos", "keyboard", "hotkey", "cgeventtap"]
categories = ["gui", "os::macos-apis"]
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules", "/target"]
links = "tauri-plugin-key-intercept"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yigitkonur/tauri-plugin-key-intercept"
homepage = "https://github.com/yigitkonur/tauri-plugin-key-intercept"
documentation = "https://docs.rs/tauri-plugin-key-intercept"
readme = "README.md"

[dependencies]
tauri = { version = "2.9.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[build-dependencies]
tauri-plugin = { version = "2.5.1", features = ["build"] }
schemars = "0.8"
